Nutch Change Log
 
Nutch Current Development 1.11-SNAPSHOT

* NUTCH-2008 IndexerMapReduce to use single instance of NutchIndexAction for deletions (snagel)

* NUTCH-1998 Add support for user-defined file extension to CommonCrawlDataDumper (totaro via mattmann)

* NUTCH-1873 Solr IndexWriter/Job to report number of docs indexed. (snagel via lewismc)
 
* NUTCH-1934 Refactor Fetcher in trunk (lewismc)

* NUTCH-2004 ParseChecker does not handle redirects (mjoyce via lewismc)

Nutch 1.10 Release - 29/04/2015 (dd/mm/yyyy)
Release Report: http://s.apache.org/nutch10

* NUTCH-1969 URL Normalizer properly handling slashes (markus via mattmann)

* NUTCH-2001 Sub Collection Field Name incorrect in nutch-default.xml 
  (Jeff Cocking via mattmann)

* NUTCH-1997 Add CBOR "magic header" to CommonCrawlDataDumper 
  output (Giuseppe Totaro, Luke Sh via mattmann)

* NUTCH-1991 Tika mime detection not using Nutch supplied tika-mimetypes.xml for content based 
  detection (Iain Lopata, snagel via mattmann)

* NUTCH-1994 Upgrade to Apache Tika 1.8 (lewismc)

* NUTCH-1996 Make protocol-selenium README part of plugin (lewismc)

* NUTCH-1990 Use URI.normalise() in BasicURLNormalizer (snagel, jnioche)

* NUTCH-1973 Job Administration end point for the REST service (Sujen Shah via mattmann)

* NUTCH-1697 SegmentMerger to implement Tool (markus, snagel)

* NUTCH-1987 - Make bin/crawl indexer agnostic (Michael Joyce, snagel via mattmann)
 
* NUTCH-1854 bin/crawl fails with a parsing fetcher (Asitang Mishra via snagel)

* NUTCH-1989 Handling invalid URLs in CommonCrawlDataDumper (Giuseppe Totaro via mattmann)

* NUTCH-1988 Make nested output directory dump optional (Michael Joyce via mattmann)

* NUTCH-1927 Create a whitelist of IPs/hostnames to allow skipping of RobotRules parsing (mattmann, snagel)

* NUTCH-1986 Clarify Elastic Search Indexer Plugin Settings (Michael Joyce via mattmann)

* NUTCH-1906 Typo in CrawlDbReader command line help (Michael Joyce via mattmann)
